base/netbox/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox-community
  labels:
    app: netbox
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: netbox
  type: ClusterIP
