base/netbox/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  annotations:
    kubernetes.io/ingress.class: nginx  
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
  namespace: netbox-community
spec:
  rules:
    - host: netbox.wep4you.com
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 8080
            pathType: ImplementationSpecific
            path: ''
  tls:
    - hosts:
        - netbox.wep4you.com
      secretName: tls-netbox-ingress
